syntax = "proto3";

message RequestVoteArgs {
  int32 term = 1;
  int32 candidateId = 2;
  int32 lastLogIndex = 3;
  int32 LastLogTerm = 4;
}

message RequestVoteReply {
  int32 term = 1;
  bool voteGranted = 2;
}

message AppendEntriesArgs {
  int32 term = 1;
  int32 leaderId = 2;
  int32 prevLogIndex = 3;
  int32 prevLogTerm = 4;
  bytes entries = 5;
  //以下Leader专有
  int32 leaderCommit = 6;
  int32 lastApplied = 7;
  bytes nextIndexf = 8;
  bytes matchIndexf = 9;
}

message AppendEntriesReply {
  int32 term = 1;
  bool success = 2;
}

service BWRaft {
  rpc RequestVote(RequestVoteArgs) returns (RequestVoteReply);
  rpc AppendEntries(AppendEntriesArgs) returns (AppendEntriesReply);
}